Update to panthor 2.0.4 with multiple route sources

--- a/configuration/config.yml
+++ b/configuration/config.yml
@@ -5,7 +5,6 @@ imports:
     - resource: config.global.yml
     - resource: config.env.yml
     - resource: routes.yml
-    - resource: routes.api.yml
     - resource: kraken/kraken.yml
 
 parameters:
@@ -22,6 +21,4 @@ parameters:
             - 'slim.hook.logger'
             - 'slim.hook.errors'
         slim.before.router:
-            - 'slim.hook.routes'
-            - 'slim.hook.routes.api'
-            - 'slim.hook.kraken.routes'
+            - 'app.slim.hook.routes'
