Manually set IDs in encrypted properties and tokens

--- a/configuration/di/controllers.admin.yml
+++ b/configuration/di/controllers.admin.yml
@@ -91,7 +91,7 @@ services:
             - @permissions
             - @json
             - @session.flasher
-            - @doctrine.random.id
+            - @doctrine.random
         calls:
             - ['setCache', [@cache]]
             - ['setCacheTTL', [%cache.page.ttl%]]
