--- a/configuration/di.yml
+++ b/configuration/di.yml
@@ -34,20 +34,25 @@ services:
         class: 'Doctrine\Common\EventManager'
         calls:
             - ['addEventListener', [['onFlush'], @doctrine.listener.logger]]
+            - ['addEventListener', [['onFlush'], @doctrine.listener.kraken.logger]]
             - ['addEventListener', [['prePersist'], @doctrine.listener.persist]]
             - ['addEventListener', [['prePersist'], @doctrine.listener.kraken.persist]]
 
     doctrine.listener.logger:
         class: 'QL\Hal\Core\Listener\DoctrineChangeLogger'
-        arguments: [@clock, @doctrine.utility.lazy.user]
+        arguments: [@clock, @doctrine.random, @doctrine.utility.lazy.user]
 
     doctrine.listener.persist:
         class: 'QL\Hal\Core\Listener\DoctrinePersistListener'
-        arguments: [@clock, @doctrine.random.id]
+        arguments: [@clock]
 
     doctrine.listener.kraken.persist:
         class: 'QL\Kraken\Core\Listener\DoctrinePersistListener'
         arguments: [@clock]
+
+    doctrine.listener.kraken.logger:
+        class: 'QL\Kraken\Core\Listener\DoctrineChangeLogger'
+        arguments: [@clock, @doctrine.random, @doctrine.utility.lazy.user]
 
     doctrine.cache:
         class: 'QL\Hal\Core\Utility\DoctrinePredisCache'
