Fix remaining breaks from entity api changes

--- a/configuration/kraken/kraken.routes.yml
+++ b/configuration/kraken/kraken.routes.yml
@@ -10,7 +10,7 @@ parameters:
 
         kraken:
             route: '/kraken'
-            stack: ['middleware.login', 'kraken.page']
+            stack: ['middleware.login', 'kraken.applications.page']
 
         kraken.applications:
             route: '/kraken/applications'
