Fix bug with deployment json handler

--- a/configuration/di/controllers.application.yml
+++ b/configuration/di/controllers.application.yml
@@ -146,6 +146,7 @@ services:
             - @json
             - @url
             - @slim.request
+            - @slim.response
             - @slim.route.parameters
     application.deployment.validator:
         class: 'QL\Hal\Validator\DeploymentValidator'
