Make kraken environmentalization a bit easier to change

--- a/configuration/config.global.yml
+++ b/configuration/config.global.yml
@@ -114,3 +114,10 @@ parameters:
     aws.region: ''
     aws.credentials.key: ''
     aws.credentials.secret: ''
+
+
+    ############################################################################
+    # kraken
+    ############################################################################
+
+    kraken.environmentalize: true
