--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
         }
     },
     "repositories": [
-        { "type": "vcs", "url": "http://git/web-core/hal-core" },
         {
             "type": "composer",
             "url": "http://composer/"
-        }
+        },
+        { "type": "vcs", "url": "http://git/web-core/hal-core" }
     ],
     "require": {
         "aws/aws-sdk-php": "2.7.*",
@@ -42,11 +42,11 @@
         "ql/panthor": "~2.0",
         "slim/slim": "2.4.*",
         "sensiolabs/ansi-to-html": "~1.1",
-        "symfony/dependency-injection": "~2.6",
-        "symfony/config": "~2.6",
-        "symfony/debug": "~2.6",
-        "symfony/finder": "~2.6",
-        "symfony/yaml": "~2.6",
+        "symfony/dependency-injection": "2.7.*",
+        "symfony/config": "2.7.*",
+        "symfony/debug": "2.7.*",
+        "symfony/finder": "2.7.*",
+        "symfony/yaml": "2.7.*",
         "twig/twig": "~1.15"
     },
     "require-dev": {
