Change where kraken symmetric encryption secret is stored

--- a/configuration/config.global.yml
+++ b/configuration/config.global.yml
@@ -121,3 +121,4 @@ parameters:
     ############################################################################
 
     kraken.environmentalize: true
+    encrypter.kraken.secret.path: 'configuration/kraken.encrypter.secret'
