Update system status to support individual agents

--- a/configuration/config.global.yml
+++ b/configuration/config.global.yml
@@ -115,6 +115,11 @@ parameters:
     aws.credentials.key: ''
     aws.credentials.secret: ''
 
+    ############################################################################
+    # agent
+    ############################################################################
+
+    hal.agents: []
 
     ############################################################################
     # kraken
