--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "predis/predis": "~1.0",
         "psr/log": "*",
         "ql/exception-toolkit": "~0.1",
-        "ql/hal-core": "2.7.*@beta",
+        "ql/hal-core": "2.7.*",
         "ql/http-problem": "~1.0",
         "ql/mcp-cache": "~2.2",
         "ql/mcp-core": "1.*",
