--- a/configuration/config.global.yml
+++ b/configuration/config.global.yml
@@ -105,7 +105,7 @@ parameters:
     ############################################################################
 
     # Check GitHub collaborators for non-prod permissions
-    permissions.check.github: false
+    permissions.check.github: true
 
     ############################################################################
     # aws
