--- a/composer.json
+++ b/composer.json
@@ -34,21 +34,22 @@
         "ql/exception-toolkit": "~0.1",
         "ql/hal-core": "2.7.*",
         "ql/http-problem": "~1.0",
-        "ql/mcp-cache": "~2.2",
-        "ql/mcp-core": "1.*",
-        "ql/mcp-corp-account": "1.0.0",
-        "ql/mcp-crypto": "~1.2",
-        "ql/mcp-logger": "1.3.*",
-        "ql/panthor": "~2.0",
+
+        "ql/mcp-cache":         "~2.2",
+        "ql/mcp-core":          "~1.0",
+        "ql/mcp-corp-account":  "~1.0",
+        "ql/mcp-crypto":        "~2.0",
+        "ql/mcp-logger":        "~2.0",
+        "ql/panthor":           "~2.1",
 
         "slim/slim": "2.4.*",
         "sensiolabs/ansi-to-html": "~1.1",
 
-        "symfony/dependency-injection": "2.7.*",
-        "symfony/config": "2.7.*",
-        "symfony/debug": "2.7.*",
-        "symfony/finder": "2.7.*",
-        "symfony/yaml": "2.7.*",
+        "symfony/dependency-injection": "~2.7",
+        "symfony/config":               "~2.7",
+        "symfony/debug":                "~2.7",
+        "symfony/finder":               "~2.7",
+        "symfony/yaml":                 "~2.7",
 
         "twig/twig": "~1.15"
     },
