--- a/configuration/di/services.yml
+++ b/configuration/di/services.yml
@@ -236,31 +236,26 @@ services:
     ####################################################################################################################
 
     logger:
-        class: 'MCP\Service\Logger\Logger'
+        class: 'MCP\Logger\Logger'
         arguments: [@logger.mcp.service, @logger.mcp.factory]
 
     logger.mcp.service:
-        class: 'MCP\Service\Logger\Service\GuzzleService'
-        arguments: [@logger.mcp.guzzle, @logger.mcp.renderer, true]
-    logger.mcp.guzzle:
-        class: 'Guzzle\Http\Client'
+        class: 'MCP\Logger\Service\Guzzle5Service'
+        arguments:
+            - @logger.mcp.guzzle
+            - @logger.mcp.renderer
+            - @logger.mcp.url
+
+    logger.mcp.url:
+        class: 'QL\UriTemplate\UriTemplate'
         arguments: [%logger.mcp.host%]
+    logger.mcp.guzzle:
+        class: 'GuzzleHttp\Client'
     logger.mcp.renderer:
-        class: 'MCP\Service\Logger\Renderer\XmlRenderer'
-        arguments: [@logger.mcp.writer]
-    logger.mcp.writer:
-        class: 'XMLWriter'
+        class: 'MCP\Logger\Renderer\XmlRenderer'
 
     logger.mcp.factory:
-        class: 'MCP\Service\Logger\Adapter\Psr\MessageFactory'
+        class: 'MCP\Logger\Adapter\Psr\MessageFactory'
         arguments: ['@clock']
         calls:
             - ['setDefaultProperty', ['applicationId', %application.id%]]
-            # replaced at runtime, maybe
-            - ['setDefaultProperty', ['machineIPAddress', @logger.mcp.serverIp]]
-            # replaced at runtime
-            - ['setDefaultProperty', ['machineName', 'localhost']]
-    logger.mcp.serverIp:
-        class: 'MCP\DataType\IPv4Address'
-        factory: ['MCP\DataType\IPv4Address', 'create']
-        arguments: ['0.0.0.0']
