--- a/configuration/config.global.yml
+++ b/configuration/config.global.yml
@@ -96,9 +96,14 @@ parameters:
         help: 'Help'
         kraken: 'Kraken'
 
+    session.encryption.secret: ''
     session.cookie.configuration:
         lifetime: '5 days'
     cookie.preferences.ttl: '5 years'
+    cookie.unencrypted:
+        - 'navpreferences'
+        - 'stickyenvironment'
+        - 'seriousbusiness'
 
     ############################################################################
     # permission settings
