--- a/configuration/di/controllers.yml
+++ b/configuration/di/controllers.yml
@@ -400,7 +400,7 @@ services:
         arguments:
             - @slim.cookies
             - @session.flasher
-            - @name.helper
+            - @utility.name.formatter
             - @currentUser
             - %cookie.preferences.ttl%
             - %navigation.list%
