Remove api helper

--- a/configuration/di/services.api.yml
+++ b/configuration/di/services.api.yml
@@ -12,6 +12,8 @@ services:
             - @slim.route
             - @normalizer
             - @hypermedia.formatter
+        calls:
+            - ['setCache', [@cache]]
 
     hypermedia.formatter:
         class: 'QL\Hal\Api\Utility\HypermediaFormatter'
