--- a/configuration/config.global.yml
+++ b/configuration/config.global.yml
@@ -62,8 +62,8 @@ parameters:
         api.queue: 0 # the queue api uses no caching
         api.queue.refresh: 0 # the queue api uses no caching
 
-    # 2 hrs for permissions
-    cache.permissions.ttl: 7200
+    # 30 min for permissions
+    cache.permissions.ttl: 1800
     cache.doctrine.ttl: 600
     cache.aws.ttl: 20
     cache.server.ttl: 300
