Switch from raw openssl symmetric to trp for internally encrypted data in the db

--- a/configuration/kraken/kraken.pages.yml
+++ b/configuration/kraken/kraken.pages.yml
@@ -214,6 +214,7 @@ services:
             - @slim.request
             - @kraken.environment.edit.twig
             - @kraken.environment
+            - @kraken.crypto.db
             - @session.flasher
             - @kraken.validator.environment
             - @doctrine.em
