Update consul service to support acl token being encrypted

--- a/configuration/kraken/kraken.services.yml
+++ b/configuration/kraken/kraken.services.yml
@@ -10,7 +10,10 @@ services:
 
     kraken.consul:
         class: 'QL\Kraken\Service\ConsulService'
-        arguments: [@kraken.guzzle, %kraken.environmentalize%]
+        arguments:
+            - @kraken.guzzle
+            - @kraken.crypto.db
+            - %kraken.environmentalize%
 
     kraken.deploy:
         class: 'QL\Kraken\Service\DeploymentService'
